# bachelors-thesis

./: .gitignore  README.md
assets/: .asset_hash  config.yaml  integration_test_revolute.usd  integration_test_sliding.usd  kmr_iiwa.usd  kmr_iiwa_full.usd  revolute_door.usd  sliding_door.usd
assets/configuration/: iiwa7_physics.usd  iiwa7_robot.usd  iiwa7_sensor.usd  kmr_iiwa_full_physics.usd  kmr_iiwa_full_robot.usd  kmr_iiwa_full_sensor.usd  kmr_iiwa_physics.usd  kmr_iiwa_robot.usd  revolute_door_base.usd  revolute_door_physics.usd  revolute_door_robot.usd  revolute_door_sensor.usd  sliding_door_base.usd  sliding_door_physics.usd  sliding_door_robot.usd  sliding_door_sensor.usd
code/iiwa_rl/: add_arm_ros_control_graph.py  add_camera_ros_graph.py  apply_gripper_friction.py  build_integration_scene.py  check_iiwa.py  check_kmr_iiwa.py  convert_urdf_usd.py  fix_apriltag_textures.py  test_gripper_motion.py
code/ros2_ws/src/kmr_iiwa_description/: CMakeLists.txt  package.xml
code/ros2_ws/src/kmr_iiwa_description/config/: ros2_controllers.yaml
code/ros2_ws/src/kmr_iiwa_description/launch/: ros2_control_test.launch.py
code/ros2_ws/src/kmr_iiwa_description/meshes/camera/: D435.stl  camera_mount.stl
code/ros2_ws/src/kmr_iiwa_description/meshes/gripper/: gripper_base.stl  gripper_finger.stl
code/ros2_ws/src/kmr_iiwa_description/urdf/: kmr_iiwa.urdf  kmr_iiwa_full.urdf  revolute_door.urdf  sliding_door.urdf
code/ros2_ws/src/kmr_iiwa_description/xacro/: camera_mount.xacro  gripper.xacro  iiwa7.xacro  kmr_base.xacro  kmr_iiwa.urdf.xacro  kmr_iiwa_ros2_control.xacro
(+48 files in other folders)
