<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kmr_iiwa_description</name>
  <version>0.0.1</version>
  <description>URDF/xacro opis i meshevi za KMR iiwa mobilni manipulator (KMR baza + iiwa7 ruka)</description>
  <maintainer email="david.mihic@gmail.com">David Mihić</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>topic_based_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
